# invenio-sipstore

./: .editorconfig  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  usage.rst
invenio_sipstore/: __init__.py  admin.py  api.py  config.py  errors.py  ext.py  models.py  proxies.py  signals.py  utils.py  version.py
invenio_sipstore/alembic/: 1c4e509ccacc_migrate_sip_content.py  ac2d9845d16f_create_sipstore_branch.py  ad6ee57b71f9_create_sipstore_tables.py  b31cad2f14c7_extend_sip_metadata_model.py
invenio_sipstore/archivers/: __init__.py  bagit_archiver.py  base_archiver.py  utils.py
invenio_sipstore/jsonschemas/: __init__.py
invenio_sipstore/jsonschemas/sipstore/: bagit-v1.0.0.json  file-v1.0.0.json
tests/: conftest.py  helpers.py  test_admin.py  test_api.py  test_bagit_archiver.py  test_base_archiver.py  test_invenio_sipstore.py  test_models.py  test_utils.py
