# SPDX-FileCopyrightText: 2016-2019 CERN.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-sipstore"
description = "Submission Information Package store for Invenio."
readme = "README.rst"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "information",
  "invenio",
  "packages",
  "submission",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "flask>=0.11.1",
  "invenio-accounts>=1.0.0",
  "invenio-db>=1.0.0",
  "invenio-files-rest>=1.0.0a23",
  "invenio-jsonschemas>=1.0.0",
  "invenio-pidstore>=1.0.0",
  "jsonschema>=2.6.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-sipstore"

[project.entry-points."invenio_admin.views"]
invenio_sipstore_recordsip = "invenio_sipstore.admin:recordsip_adminview"
invenio_sipstore_sip = "invenio_sipstore.admin:sip_adminview"
invenio_sipstore_sipfile = "invenio_sipstore.admin:sipfile_adminview"
invenio_sipstore_sipmetadata = "invenio_sipstore.admin:sipmetadata_adminview"
invenio_sipstore_sipmetadatatype = "invenio_sipstore.admin:sipmetadatatype_adminview"

[project.entry-points."invenio_base.api_apps"]
invenio_sipstore = "invenio_sipstore:InvenioSIPStore"

[project.entry-points."invenio_base.apps"]
invenio_sipstore = "invenio_sipstore:InvenioSIPStore"

[project.entry-points."invenio_db.alembic"]
invenio_sipstore = "invenio_sipstore:alembic"

[project.entry-points."invenio_db.models"]
invenio_sipstore = "invenio_sipstore.models"

[project.entry-points."invenio_jsonschemas.schemas"]
sipstore = "invenio_sipstore.jsonschemas"

[project.optional-dependencies]
admin = [
  "flask-admin>=1.3.0",
]
docs = [
  "sphinx>=1.4.2",
]
tests = [
  "coverage>=4.0",
  "invenio-records-files>=1.0.0a11",
  "isort>=4.3.4",
  "pydocstyle>=1.0.0",
  "pytest-cov>=1.8.0",
  "pytest-mock>=1.6.0",
  "pytest-pep8>=1.0.6",
  "pytest>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "invenio_sipstore/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_sipstore",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_sipstore --cov-report=term-missing'
testpaths = "tests invenio_sipstore"
live_server_scope = "module"
