# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2016-2019 CERN.
# Copyright (C) 2024 TU Wien.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-sipstore
version = attr: invenio_sipstore.__version__
description = Submission Information Package store for Invenio.
long_description = file: README.rst, CHANGES.rst
keywords = invenio submission information packages
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-sipstore
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >= 3.7
zip_safe = False
install_requires =
    Flask>=0.11.1
    invenio-db>=1.0.0
    invenio-accounts>=1.0.0
    invenio-pidstore>=1.0.0
    invenio-jsonschemas>=1.0.0
    invenio-files-rest>=1.0.0a23
    invenio-search>=2.0
    jsonschema>=2.6.0

[options.extras_require]
admin =
    Flask-Admin>=1.3.0
docs =
    Sphinx>=4.5.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.0,<3
opensearch1 =
    invenio-search[opensearch1]>=2.0,<3
opensearch2 =
    invenio-search[opensearch2]>=2.0,<3
tests =
    Flask-Admin>=1.3.0
    check-manifest>=0.25
    coverage>=4.0
    invenio-records-files>=1.0.0a11
    isort>=4.3.4
    pydocstyle>=1.0.0
    pytest-black>=0.3.0
    pytest-cov>=1.8.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    pytest-runner>=2.6.2
    pytest>=3.6.0
    sphinx>=4.5.0

[options.entry_points]
invenio_db.models =
    invenio_sipstore = invenio_sipstore.models
invenio_db.alembic =
    invenio_sipstore = invenio_sipstore:alembic
invenio_base.apps =
    invenio_sipstore = invenio_sipstore:InvenioSIPStore
invenio_base.api_apps =
    invenio_sipstore = invenio_sipstore:InvenioSIPStore
invenio_jsonschemas.schemas =
    sipstore = invenio_sipstore.jsonschemas
invenio_admin.views =
    invenio_sipstore_sip = invenio_sipstore.admin:sip_adminview
    invenio_sipstore_sipfile = invenio_sipstore.admin:sipfile_adminview
    invenio_sipstore_sipmetadata = invenio_sipstore.admin:sipmetadata_adminview
    invenio_sipstore_sipmetadatatype = invenio_sipstore.admin:sipmetadatatype_adminview
    invenio_sipstore_recordsip = invenio_sipstore.admin:recordsip_adminview

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_sipstore --cov-report=term-missing
testpaths = docs tests invenio_sipstore
